--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,3 +34,13 @@ jobs:
 #    - name: Test with pytest
 #      run: |
 #        pytest
+    - name: CD
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        KEY: ${{ secrets.SSHKEY }}
+        script: |
+          cd /usr/local/app
+          git pull git@github.com:SincerelyUnique/grimm-backend.git
+          ./run_grimm &
