--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,4 +43,5 @@ jobs:
         script: |
           cd /usr/local/app
           git pull git@github.com:SincerelyUnique/grimm-backend.git
+          pip install -r requirements.txt
           ./run_grimm &
