--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,5 +44,6 @@ jobs:
         script: |
           cd /usr/local/app/grimm-backend
           git pull git@github.com:SincerelyUnique/grimm-backend.git
+          source ./venv/bin/activate
           pip install -r requirements.txt
           ./run_grimm &
