--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,6 +43,7 @@ jobs:
         PORT: ${{ secrets.PORT }}
         script: |
           cd /usr/local/app/grimm-backend
+          echo 'source code'
           git pull git@github.com:SincerelyUnique/grimm-backend.git
           source ./venv/bin/activate
           pip install -r requirements.txt
