test git action1

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,4 +50,4 @@ jobs:
           pid=$(cat /opt/provision/logs/grimm.pid)
           echo "$pid"
           kill -9 $pid
-          ./run_grimm &
+          ./run_grimm.sh &
