--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,5 +50,4 @@ jobs:
           pid=$(cat /usr/local/app/grimm-backend/logs/grimm.pid)
           echo "$pid"
           kill -9 $pid
-          ./run_grimm.sh &
-          echo -e '\003'
+          nohup ./run_grimm.sh &
